--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-venv/
+*~
+venv
+build.stamp
+proof
+
+# OS generated files #
+######################
 .DS_Store
-*(Autosaved)*
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
