Changed build to designspace-driven
The rvrn feature rules that Literata employs unfortunately cannot be implemented via Glyphs due to limitations in the bracket feature, etc. Have instead switched to using static designspace files that will build the fonts.

End result LGTM.

--- a/sources/config.yaml
+++ b/sources/config.yaml
@@ -1,6 +1,6 @@
 sources:
-  - Literata.glyphs
-  - Literata-Italic.glyphs
+  - designspace/Literata.designspace
+  - designspace/Literata-Italic.designspace
 axisOrder:
   - wght
 familyName: "Literata"
